categories, library, home and bag is added(Honsa), and is joined with the header and sideMenu(David), and the Swag API is implemented(Camilo)

--- a/game-store/src/components/sideMenu.css
+++ b/game-store/src/components/sideMenu.css
@@ -1,78 +1,92 @@
 .sideMenu {
-    width: 20%;
-    height: 100%;
-    padding: 30px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 30px;
-    background: var(--bgColor);
-    box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
+  width: 20%;
+  height: 100%;
+  padding: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+  background: var(--bgColor);
+  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
     5px 5px 15px rgba(0, 0, 0, 0.35);
-    display: flex;
-    flex-direction: column;
-    transition: 1s;
+  display: flex;
+  flex-direction: column;
+  transition: 1s;
 }
 
 .sideMenu .logo {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: relative;
-    text-decoration: none;
-    display: inline-flex;
-    align-items: center;
-    gap: 15px;
-    color: #ffffff;
-    font-size: 2em;
-    font-weight: 600;
-    letter-spacing: 1px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  position: relative;
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  gap: 15px;
+  color: #ffffff;
+  font-size: 2em;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 
 .sideMenu .nav {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    gap: 15px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  gap: 15px;
 }
 
 .sideMenu .nav li a {
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 1.2em;
-    letter-spacing: 1px;
-    display: inline-flex;
-    align-items:  center;
-    gap: 25px;
-    transition: 0.5s;
-    background: var(--bgColor);
-    border-radius: 20px;
-    padding: 10px 20px;
-    width: 100%;
-    transition: 0.5s;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1.2em;
+  letter-spacing: 1px;
+  display: inline-flex;
+  align-items: center;
+  gap: 25px;
+  transition: 0.5s;
+  background: var(--bgColor);
+  border-radius: 20px;
+  padding: 10px 20px;
+  width: 100%;
+  transition: 0.5s;
 }
 
 .sideMenu .nav li a:hover,
 .sideMenu .nav li a.active {
-    box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
+  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
     5px 5px 15px rgba(0, 0, 0, 0.35);
 }
 
 .sideMenu.active {
-    width: 7%;
-    transition: 1s;
-    overflow: hidden;
-    align-items: center;
+  width: 7%;
+  transition: 1s;
+  overflow: hidden;
+  align-items: center;
 }
 
 .sideMenu.active .brand,
 .sideMenu.active .navName {
-    display: none;
+  display: none;
 }
 
 .sideMenu.active .nav li a {
-    font-size: 1.8em;
+  font-size: 1.8em;
 }
 
-.banner.active {
-    position: relative;
-    width: 93%;
-    transition: 1s;
+@media (max-width: 768px) {
+  .sideMenu {
+    position: absolute;
+    left: 8px;
+    align-items: center;
+    padding: 30px;
+    z-index: 1500;
+  }
+
+  .sideMenu.active {
+    left: -100px;
+  }
+
+  .sideMenu .brand,
+  .sideMenu .navName {
+    display: none;
+  }
+
 }
