--- a/game-store/client/src/pages/header.css
+++ b/game-store/client/src/pages/header.css
@@ -55,7 +55,7 @@ header {
   align-items: center;
 }
 
-.userItems .avatar {
+/* .userItems .avatar {
   width: 150px;
   height: 50px;
   padding: 10px 20px;
@@ -91,7 +91,7 @@ header {
 .userItems .avatar .user a {
   text-decoration: none;
   font-size: 0.6rem;
-}
+} */
 
 @media (max-width: 768px) {
   .userItems .avatar {
@@ -108,4 +108,14 @@ header {
   .menu.active {
     margin-left: 0;
   }
+}
+
+.login {
+  display: inline-flex;
+align-items: center;
+gap: 20px;
+color: #ffffff;
+box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
+        5px 5px 15px rgba(0, 0, 0, 0.35);
+
 }
