The frontent was improved visually and now is responsive, and css was included to the Login Page

--- a/game-store/client/src/components/gameCard.css
+++ b/game-store/client/src/components/gameCard.css
@@ -7,8 +7,8 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 20px;
   background: var(--bgColor);
-  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
-    5px 5px 15px rgba(0, 0, 0, 0.35);
+  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.774),
+    5px 5px 15px rgba(0, 0, 0, 0.733);
 }
 
 .gameCard img {
@@ -59,7 +59,8 @@
 
 .gameCard .gameTitle {
   margin-top: 10px;
-  font-family: 'Bauhaus 93';
+  font-family: "IBM Plex Mono", monospace;  
+  font-weight: 1000;  
   text-transform: uppercase;
   font-size: 1.3rem;
 }
