--- a/game-store/client/src/pages/categories.css
+++ b/game-store/client/src/pages/categories.css
@@ -1,3 +1,4 @@
+
 .filters {
   display: flex;
   flex-wrap: wrap;
@@ -11,15 +12,15 @@
   color: #ffffff;
   padding: 10px 25px;
   transition: 0.3s;
-  border-radius: 10px;
+  border-radius: 10px 60px;
   text-transform: uppercase;
   cursor: pointer;
 }
 
 .filters li:hover,
 .filters li.active {
-  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.1),
-    5px 5px 10px rgba(0, 0, 0, 0.35);
+  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.774),
+  5px 5px 15px rgba(0, 0, 0, 0.733);
 }
 
 .search {
@@ -31,9 +32,9 @@
   height: 50px;
   padding: 8px 20px;
   margin-bottom: 20px;
-  border-radius: 10px;
-  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
-    5px 5px 15px rgba(0, 0, 0, 0.35);
+  border-radius: 10px 60px;
+  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.774),
+  5px 5px 15px rgba(0, 0, 0, 0.733);
 }
 
 .search input {
