--- a/game-store/client/src/App.css
+++ b/game-store/client/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import url('//db.onlinewebfonts.com/c/89d11a443c316da80dcb8f5e1f63c86e?family=Bauhaus+93');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
 
 * {
   margin: 0;
@@ -8,9 +9,9 @@
 }
 
 :root {
-  --primary: #0d171f;
-  --second: #0998a8;
-  --bgColor: #192938;
+  --primary: #000000;
+  --second: #460000;
+  --bgColor: #0f0e0e;
 }
 
 h1,
@@ -23,8 +24,8 @@ p {
 body {
   position: relative;
   background: var(--bgColor);
-  font-family: 'Roboto', sans-serif;
-  width: 100%;
+  font-family: "IBM Plex Mono", monospace;  width: 100%;
+  font-weight: 1000;
   min-height: 100vh;
   overflow: hidden;
 }
