--- a/game-store/client/src/components/gameSwiper.css
+++ b/game-store/client/src/components/gameSwiper.css
@@ -26,7 +26,7 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.3);
-  border-radius: 30px !important;
+  border-radius: 10px 60px !important;
 }
 
 .swiper-slide img {
@@ -37,7 +37,7 @@
   height: 100%;
   object-fit: cover;
   object-position: center;
-  border-radius: 30px !important;
+  border-radius: 10px 60px !important;
 }
 
 .swiper-slide .video iframe {
@@ -46,11 +46,11 @@
   top: 0;
   width: 85%;
   height: 75%;
-  border-radius: 0 30px 0 30px !important;
+  border-radius: 10px 60px !important;
   border: 5px solid transparent;
   background: var(--second);
-  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
-    5px 5px 15px rgba(0, 0, 0, 0.35);
+  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.774),
+  5px 5px 15px rgba(0, 0, 0, 0.733);
   z-index: 1100;
   visibility: hidden;
   opacity: 0;
@@ -73,8 +73,9 @@
 }
 
 .gameSlider .content h2 {
-  font-family: 'Bauhaus 93';
-  font-size: 3.5rem;
+  font-family: "IBM Plex Mono", monospace;  width: 100%;
+  font-weight: 1000;
+  font-size: 2.5rem;
 }
 
 .gameSlider .content p {
@@ -156,7 +157,8 @@
   }
 
   .gameSlider .content h2 {
-    font-family: 'Bauhaus 93';
+    font-family: "IBM Plex Mono", monospace;  width: 100%;
+  font-weight: 1000;
     font-size: 1.5rem;
   }
 
