--- a/game-store/client/src/components/sideMenu.css
+++ b/game-store/client/src/components/sideMenu.css
@@ -3,17 +3,17 @@
   height: 100%;
   padding: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 30px;
+  border-radius: 10px 60px;
   background: var(--bgColor);
-  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
-    5px 5px 15px rgba(0, 0, 0, 0.35);
+  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.774),
+  5px 5px 15px rgba(0, 0, 0, 0.733);
   display: flex;
   flex-direction: column;
   transition: 1s;
 }
 
 .sideMenu .logo {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   position: relative;
   text-decoration: none;
   display: inline-flex;
@@ -71,13 +71,14 @@
   font-size: 1.8em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1250px) {
   .sideMenu {
     position: absolute;
     left: 8px;
     align-items: center;
     padding: 30px;
     z-index: 1500;
+    width: 80px;
   }
 
   .sideMenu.active {
