--- a/game-store/client/src/pages/header.css
+++ b/game-store/client/src/pages/header.css
@@ -28,9 +28,9 @@ header {
   font-size: 1.5rem;
   width: 50px;
   height: 50px;
-  border-radius: 10px;
-  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
-    5px 5px 15px rgba(0, 0, 0, 0.35);
+  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.774),
+    5px 5px 15px rgba(0, 0, 0, 0.733);
+  border-radius: 20px 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -93,7 +93,7 @@ header {
   font-size: 0.6rem;
 } */
 
-@media (max-width: 768px) {
+@media (max-width: 1250px) {
   .userItems .avatar {
     display: none;
   }
@@ -108,14 +108,25 @@ header {
   .menu.active {
     margin-left: 0;
   }
+
+  .bi-sliders{
+    display: none;
+  }
+
 }
 
 .login {
   display: inline-flex;
-align-items: center;
-gap: 20px;
-color: #ffffff;
-box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.1),
-        5px 5px 15px rgba(0, 0, 0, 0.35);
+  align-items: center;
+  gap: 20px;
+  color: #ffffff;
+}
 
+.login button{
+  width: 100px;
+  height: 40px;
+  border-radius: 20px 40px;
+    border-radius: 20px 40px;
+    box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.774),
+    5px 5px 15px rgba(0, 0, 0, 0.733);
 }
