--- a/game-store/client/src/pages/Register.css
+++ b/game-store/client/src/pages/Register.css
@@ -1,4 +1,4 @@
-#cont{
+#contt{
     position: relative;
     left: 50%;
     top: 100px;
@@ -19,12 +19,7 @@
     align-content: center;
 }
 
-#Register{
-    position: relative;
-    font-size: 3em;
-    left: 25%;
-    margin-bottom: 20px;
-}
+
 
 #nameinput{
     height: 40px;
@@ -50,4 +45,22 @@
     position: relative;
     width: 100px;
     left: 35%;
+}
+
+#Login{
+    position: relative;
+    left: 25%;
+    font-weight: 500;
+    margin-top: 10px;
+    font-size: .8em;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+#Register{
+    position: relative;
+    font-size: 3em;
+    left: 15%;
+    margin-bottom: 20px;
+    text-decoration: none;
 }
